# oak

./: CMakeLists.txt  README.md
docs/: README.md
include/: A3000.h  Display.h  Oak.h  Version.h  Version.h.in
include/chipset/: Device.h  Ioc.h  Memc.h  Ram.h  Rom.h
include/chipset/arm2/: Arm2.h  Cpsr.h  Register.h  RegisterFile.h
include/chipset/arm2/opcodes/: BlockTransfer.h  Branch.h  DataProcessing.h  Multiply.h  Op.h  OpFactory.h  SingleTransfer.h
include/util/: Integral.h  Log.h
source/: A3000.cc  CMakeLists.txt  Display.cc  main.cc
source/chipset/: Device.cc  Ioc.cc  Memc.cc  Ram.cc  Rom.cc
source/chipset/arm2/: Arm2.cc  Cpsr.cc  Register.cc  RegisterFile.cc
source/chipset/arm2/opcodes/: BlockTransfer.cc  Branch.cc  DataProcessing.cc  Multiply.cc  Op.cc  OpFactory.cc  SingleTransfer.cc
source/util/: Log.cc
src/: .gitignore  A3000.cpp  A3000.h  Makefile  debug.c  debug.cpp  debug.h  display.c  display.cpp  display.h  lock.cpp  lock.h  oak.c  oak.cfg  oak.cpp  oak.h  settings.c  settings.cpp  settings.h  state.c  state.cpp  state.h  timers.cpp  timers.h  util.c  util.h
src/acorn/: A3000.c  A3000.cpp  A3000.h  ioc.c  ioc.cpp  ioc.h  memc.c  memc.cpp  memc.h  ram.c  ram.h  rom.c  rom.h  vidc.c  vidc.cpp  vidc.h
src/acorn/arm2/: arm.cpp  arm.h  arm2.c  arm2.h  arm_op.c  arm_op.cpp  arm_ops.h
src/acorn/arm250/: arm.cpp  arm.h
test/: CMakeLists.txt  utCpsr.cc  utIoc.cc  utLog.cc  utRegister.cc  utRegisterFile.cc  utmain.cc
